i2f-tools/i2f-jdbc-procedure-idea-plugin/src/main/java/i2f/turbo/idea/plugin/tinyscript/grammar/parser/TinyScriptParser.java
// This is a generated file. Not intended for manual editing.
package i2f.turbo.idea.plugin.tinyscript.grammar.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;

import static i2f.turbo.idea.plugin.tinyscript.grammar.psi.TinyScriptTypes.*;
import static i2f.turbo.idea.plugin.tinyscript.lang.parser.TinyScriptParserUtil.*;

import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TinyScriptParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, null);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return root(b, l + 1);
    }

    /* ********************************************************** */
    // ((NAMING|constString) TERM_COLON)? argumentValue
    public static boolean argument(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
        r = argument_0(b, l + 1);
        r = r && argumentValue(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // ((NAMING|constString) TERM_COLON)?
    private static boolean argument_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument_0")) return false;
        argument_0_0(b, l + 1);
        return true;
    }

    // (NAMING|constString) TERM_COLON
    private static boolean argument_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument_0_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = argument_0_0_0(b, l + 1);
        r = r && consumeToken(b, TERM_COLON);
        exit_section_(b, m, null, r);
        return r;
    }

    // NAMING|constString
    private static boolean argument_0_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument_0_0_0")) return false;
        boolean r;
        r = consumeToken(b, NAMING);
        if (!r) r = constString(b, l + 1);
        return r;
    }

    /* ********************************************************** */
    // argument ( TERM_COMMA argument )*
    public static boolean argumentList(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argumentList")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
        r = argument(b, l + 1);
        r = r && argumentList_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // ( TERM_COMMA argument )*
    private static boolean argumentList_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argumentList_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!argumentList_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "argumentList_1", c)) break;
        }
        return true;
    }

    // TERM_COMMA argument
    private static boolean argumentList_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argumentList_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_COMMA);
        r = r && argument(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // express
    public static boolean argumentValue(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argumentValue")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ARGUMENT_VALUE, "<argument value>");
        r = express(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_NUMBER_BIN
    public static boolean binNumber(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "binNumber")) return false;
        if (!nextTokenIs(b, TERM_CONST_NUMBER_BIN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_CONST_NUMBER_BIN);
        exit_section_(b, m, BIN_NUMBER, r);
        return r;
    }

    /* ********************************************************** */
    // ( KEY_AS | KEY_CAST  | KEY_IS | KEY_INSTANCE_OF | KEY_TYPE_OF) express
    public static boolean castInstanceOfRightPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "castInstanceOfRightPart")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CAST_INSTANCE_OF_RIGHT_PART, "<cast instance of right part>");
        r = castInstanceOfRightPart_0(b, l + 1);
        r = r && express(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // KEY_AS | KEY_CAST  | KEY_IS | KEY_INSTANCE_OF | KEY_TYPE_OF
    private static boolean castInstanceOfRightPart_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "castInstanceOfRightPart_0")) return false;
        boolean r;
        r = consumeToken(b, KEY_AS);
        if (!r) r = consumeToken(b, KEY_CAST);
        if (!r) r = consumeToken(b, KEY_IS);
        if (!r) r = consumeToken(b, KEY_INSTANCE_OF);
        if (!r) r = consumeToken(b, KEY_TYPE_OF);
        return r;
    }

    /* ********************************************************** */
    // scriptBlock
    public static boolean catchBodyBlock(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBodyBlock")) return false;
        if (!nextTokenIs(b, TERM_CURLY_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = scriptBlock(b, l + 1);
        exit_section_(b, m, CATCH_BODY_BLOCK, r);
        return r;
    }

    /* ********************************************************** */
    // NAMING
    public static boolean classNameBlock(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "classNameBlock")) return false;
        if (!nextTokenIs(b, NAMING)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, NAMING);
        exit_section_(b, m, CLASS_NAME_BLOCK, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_COMMENT_SINGLE_LINE | TERM_COMMENT_MULTI_LINE
    public static boolean commentSegment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "commentSegment")) return false;
        if (!nextTokenIs(b, "<comment segment>", TERM_COMMENT_MULTI_LINE, TERM_COMMENT_SINGLE_LINE)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, COMMENT_SEGMENT, "<comment segment>");
        r = consumeToken(b, TERM_COMMENT_SINGLE_LINE);
        if (!r) r = consumeToken(b, TERM_COMMENT_MULTI_LINE);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // KEY_IN | KEY_NOT_IN| OP_GTE | KEY_GTE | OP_LTE | KEY_LTE | OP_NE | KEY_NE | OP_NEQ | KEY_NEQ | OP_EQ | KEY_EQ | OP_GT | KEY_GT | OP_LT | KEY_LT
    public static boolean compareOperatorPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "compareOperatorPart")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, COMPARE_OPERATOR_PART, "<compare operator part>");
        r = consumeToken(b, KEY_IN);
        if (!r) r = consumeToken(b, KEY_NOT_IN);
        if (!r) r = consumeToken(b, OP_GTE);
        if (!r) r = consumeToken(b, KEY_GTE);
        if (!r) r = consumeToken(b, OP_LTE);
        if (!r) r = consumeToken(b, KEY_LTE);
        if (!r) r = consumeToken(b, OP_NE);
        if (!r) r = consumeToken(b, KEY_NE);
        if (!r) r = consumeToken(b, OP_NEQ);
        if (!r) r = consumeToken(b, KEY_NEQ);
        if (!r) r = consumeToken(b, OP_EQ);
        if (!r) r = consumeToken(b, KEY_EQ);
        if (!r) r = consumeToken(b, OP_GT);
        if (!r) r = consumeToken(b, KEY_GT);
        if (!r) r = consumeToken(b, OP_LT);
        if (!r) r = consumeToken(b, KEY_LT);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // express
    public static boolean conditionBlock(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "conditionBlock")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONDITION_BLOCK, "<condition block>");
        r = express(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_BOOLEAN
    public static boolean constBool(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constBool")) return false;
        if (!nextTokenIs(b, TERM_CONST_BOOLEAN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_CONST_BOOLEAN);
        exit_section_(b, m, CONST_BOOL, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_TYPE_CLASS
    public static boolean constClass(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constClass")) return false;
        if (!nextTokenIs(b, TERM_CONST_TYPE_CLASS)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_CONST_TYPE_CLASS);
        exit_section_(b, m, CONST_CLASS, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_STRING_MULTILINE
    //     |TERM_CONST_STRING_MULTILINE_QUOTE
    public static boolean constMultilineString(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constMultilineString")) return false;
        if (!nextTokenIs(b, "<const multiline string>", TERM_CONST_STRING_MULTILINE, TERM_CONST_STRING_MULTILINE_QUOTE))
            return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONST_MULTILINE_STRING, "<const multiline string>");
        r = consumeToken(b, TERM_CONST_STRING_MULTILINE);
        if (!r) r = consumeToken(b, TERM_CONST_STRING_MULTILINE_QUOTE);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_NULL
    public static boolean constNull(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constNull")) return false;
        if (!nextTokenIs(b, TERM_CONST_NULL)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_CONST_NULL);
        exit_section_(b, m, CONST_NULL, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_STRING_RENDER
    //     |TERM_CONST_STRING_RENDER_SINGLE
    public static boolean constRenderString(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constRenderString")) return false;
        if (!nextTokenIs(b, "<const render string>", TERM_CONST_STRING_RENDER, TERM_CONST_STRING_RENDER_SINGLE))
            return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONST_RENDER_STRING, "<const render string>");
        r = consumeToken(b, TERM_CONST_STRING_RENDER);
        if (!r) r = consumeToken(b, TERM_CONST_STRING_RENDER_SINGLE);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // TERM_CONST_STRING
    //     |TERM_CONST_STRING_SINGLE
    public static boolean constString(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constString")) return false;
        if (!nextTokenIs(b, "<const string>", TERM_CONST_STRING, TERM_CONST_STRING_SINGLE)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONST_STRING, "<const string>");
        r = consumeToken(b, TERM_CONST_STRING);
        if (!r) r = consumeToken(b, TERM_CONST_STRING_SINGLE);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // constBool
    //     | constClass
    //     | constNull
    //     | constMultilineString
    //     | constRenderString
    //     | constString
    //     | decNumber
    //     | hexNumber
    //     | otcNumber
    //     | binNumber
    public static boolean constValue(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constValue")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONST_VALUE, "<const value>");
        r = constBool(b, l + 1);
        if (!r) r = constClass(b, l + 1);
        if (!r) r = constNull(b, l + 1);
        if (!r) r = constMultilineString(b, l + 1);
        if (!r) r = constRenderString(b, l + 1);
        if (!r) r = constString(b, l + 1);
        if (!r) r = decNumber(b, l + 1);
        if (!r) r = hexNumber(b, l + 1);
        if (!r) r = otcNumber(b, l + 1);
        if (!r) r = binNumber(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // KEY_BREAK
    //     | KEY_CONTINUE
    //     | KEY_RETURN (express)?
    public static boolean controlSegment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "controlSegment")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONTROL_SEGMENT, "<control segment>");
        r = consumeToken(b, KEY_BREAK);
        if (!r) r = consumeToken(b, KEY_CONTINUE);
        if (!r) r = controlSegment_2(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // KEY_RETURN (express)?
    private static boolean controlSegment_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "controlSegment_2")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KEY_RETURN);
        r = r && controlSegment_2_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (express)?
    private static boolean controlSegment_2_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "controlSegment_2_1")) return false;
        controlSegment_2_1_0(b, l + 1);
        return true;
    }

    // (express)
    private static boolean controlSegment_2_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "controlSegment_2_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = express(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // KEY_DEBUGGER (namingBlock)? (TERM_PAREN_L conditionBlock TERM_PAREN_R)?
    public static boolean debuggerSegment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "debuggerSegment")) return false;
        if (!nextTokenIs(b, KEY_DEBUGGER)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KEY_DEBUGGER);
        r = r && debuggerSegment_1(b, l + 1);
        r = r && debuggerSegment_2(b, l + 1);
        exit_section_(b, m, DEBUGGER_SEGMENT, r);
        return r;
    }

    // (namingBlock)?
    private static boolean debuggerSegment_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "debuggerSegment_1")) return false;
        debuggerSegment_1_0(b, l + 1);
        return true;
    }

    // (namingBlock)
    private static boolean debuggerSegment_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "debuggerSegment_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = namingBlock(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (TERM_PAREN_L conditionBlock TERM_PAREN_R)?
    private static boolean debuggerSegment_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "debuggerSegment_2")) return false;
        debuggerSegment_2_0(b, l + 1);
        return true;
    }

    // TERM_PAREN_L conditionBlock TERM_PAREN_R
    private static boolean debuggerSegment_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "debuggerSegment_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_PAREN_L);
        r = r && conditionBlock(b, l + 1);
        r = r && consumeToken(b, TERM_PAREN_R);
        exit_section_(b, m, null, r);
        return r;
    }
